--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2024"
 
 [dependencies]
 ark-ec = "0.5"
+ark-ed25519 = "0.5"
 ark-ff = "0.5"
+ark-serialize = "0.5"
 ark-std = "0.5"
 rand = "0.9.1"
-ark-ed25519 = "0.5.0"
-ark-serialize = "0.5.0"
+sha2 = "0.10.9"
